--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             <div class="container">
                 <div class="profile-card-container">
                     <img class="profile-card-image" src="https://cdn.discordapp.com/attachments/1130972374368522301/1204157702499213393/kadraapfp.png?ex=65d3b640&is=65c14140&hm=6247c212ce72d33b5545144e42beb0b139d995818d89111687c2e62e0f22a640&" />
-                    <p class="profile-card-name">emin</p>
+                    <p class="profile-card-name">kadraa</p>
                 </div>
                 <img class="middle-heart" src="./public/heart.svg" alt="heart" />
                 <div class="profile-card-container">
                     <img class="profile-card-image" src="https://cdn.discordapp.com/attachments/1130972374368522301/1204156930906529852/16439165a5076c94bea6b32b4e448ba8.jpg?ex=65d3b588&is=65c14088&hm=60b1fb2f5b3db7a31bf7a71dab42f6644d15406efba940bb109be0283b11f268&" />
-                    <p class="profile-card-name">digger</p>
+                    <p class="profile-card-name">henumaa</p>
                 </div>
             </div>
             <p class="secondary-text">have been together for</p>
