--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                     <p class="profile-card-name">henumaa</p>
                 </div>
             </div>
-            <p class="secondary-text">have been together for</p>
+            <p class="secondary-text">su zajedno</p>
             <h1 class="main-text" id="formattedTimeDisplay">
-                0 years, 0 days
+                0 godina, 0 dana
             </h1>
             <div class="progress-container">
                 <div class="progress-bar">
