--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                     remainingMilliseconds / millisecondsInDay
                 );
 
-                if (years === 0) return `${days} days`;
+                if (years === 0) return `${days} dana`;
 
-                return `${years} years, ${days} days`;
+                return `${years} godina, ${days} dana`;
             }
 
             const now = new Date().getTime() / 1000;
